Continue work at school

--- a/immigration-notebook.ipynb
+++ b/immigration-notebook.ipynb
@@ -122,6 +122,8 @@
    "source": [
     "california_data = {_:{} for _ in years}\n",
     "minnesota_data = {_:{} for _ in years}\n",
+    "florida_data = {_:{} for _ in years}\n",
+    "pennsylvania_data = {_:{} for _ in years}\n",
     "# years go in ascending order\n",
     "# {\n",
     "#     \"immigrants\": ,\n",
@@ -185,6 +187,60 @@
     "    \"violent_crime_rate\": 242.6,\n",
     "    \"property_crime\": 117756,\n",
     "    \"property_crime_rate\": 2133.3,\n",
+    "}\n",
+    "florida_data[2000] = {\n",
+    "    \"immigrants\": 2671000,\n",
+    "    \"total_population\": 15982000,\n",
+    "    \"immigrant_share\": 16.7,\n",
+    "    \"violent_crime\": 129777,\n",
+    "    \"violent_crime_rate\": 812,\n",
+    "    \"property_crime\": 780377,\n",
+    "    \"property_crime_rate\": 4882.7,\n",
+    "}\n",
+    "florida_data[2010] = {\n",
+    "    \"immigrants\": 3658000,\n",
+    "    \"total_population\": 18843000,\n",
+    "    \"immigrant_share\": 19.4,\n",
+    "    \"violent_crime\": 101969,\n",
+    "    \"violent_crime_rate\": 542.4,\n",
+    "    \"property_crime\": 669035,\n",
+    "    \"property_crime_rate\": 3558.4,\n",
+    "}\n",
+    "florida_data[2016] = {\n",
+    "    \"immigrants\": 4237000,\n",
+    "    \"total_population\": 20612000,\n",
+    "    \"immigrant_share\": 20.6,\n",
+    "    \"violent_crime\": 88700,\n",
+    "    \"violent_crime_rate\": 430.3,\n",
+    "    \"property_crime\": 553812,\n",
+    "    \"property_crime_rate\": 2686.8,\n",
+    "}\n",
+    "pennsylvania_data[2000] = {\n",
+    "    \"immigrants\": 508000,\n",
+    "    \"total_population\": 12281000,\n",
+    "    \"immigrant_share\": 4.1,\n",
+    "    \"violent_crime\": 12404,\n",
+    "    \"violent_crime_rate\": 325.7,\n",
+    "    \"property_crime\": 62973,\n",
+    "    \"property_crime_rate\": 1653.4,\n",
+    "}\n",
+    "pennsylvania_data[2010] = {\n",
+    "    \"immigrants\": 739000,\n",
+    "    \"total_population\": 12710000,\n",
+    "    \"immigrant_share\": 5.8,\n",
+    "    \"violent_crime\": 46514,\n",
+    "    \"violent_crime_rate\": 366.2,\n",
+    "    \"property_crime\": 276023,\n",
+    "    \"property_crime_rate\": 2173,\n",
+    "}\n",
+    "pennsylvania_data[2016] = {\n",
+    "    \"immigrants\": 871000,\n",
+    "    \"total_population\": 12784000,\n",
+    "    \"immigrant_share\": 6.8,\n",
+    "    \"violent_crime\": 40447,\n",
+    "    \"violent_crime_rate\": 316.4,\n",
+    "    \"property_crime\": 222795,\n",
+    "    \"property_crime_rate\": 1742.7,\n",
     "}"
    ]
   },
