--- a/immigration-notebook.ipynb
+++ b/immigration-notebook.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -430,6 +432,190 @@
    "source": [
     "mi_df = pd.DataFrame.from_dict(minnesota_data, orient='index')\n",
     "mi_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_population</th>\n",
+       "      <th>violent_crime_rate</th>\n",
+       "      <th>property_crime</th>\n",
+       "      <th>immigrants</th>\n",
+       "      <th>property_crime_rate</th>\n",
+       "      <th>violent_crime</th>\n",
+       "      <th>immigrant_share</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>15982000</td>\n",
+       "      <td>812.0</td>\n",
+       "      <td>780377</td>\n",
+       "      <td>2671000</td>\n",
+       "      <td>4882.7</td>\n",
+       "      <td>129777</td>\n",
+       "      <td>16.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>18843000</td>\n",
+       "      <td>542.4</td>\n",
+       "      <td>669035</td>\n",
+       "      <td>3658000</td>\n",
+       "      <td>3558.4</td>\n",
+       "      <td>101969</td>\n",
+       "      <td>19.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>20612000</td>\n",
+       "      <td>430.3</td>\n",
+       "      <td>553812</td>\n",
+       "      <td>4237000</td>\n",
+       "      <td>2686.8</td>\n",
+       "      <td>88700</td>\n",
+       "      <td>20.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      total_population  violent_crime_rate  property_crime  immigrants  \\\n",
+       "2000          15982000               812.0          780377     2671000   \n",
+       "2010          18843000               542.4          669035     3658000   \n",
+       "2016          20612000               430.3          553812     4237000   \n",
+       "\n",
+       "      property_crime_rate  violent_crime  immigrant_share  \n",
+       "2000               4882.7         129777             16.7  \n",
+       "2010               3558.4         101969             19.4  \n",
+       "2016               2686.8          88700             20.6  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fl_df = pd.DataFrame.from_dict(florida_data, orient='index')\n",
+    "fl_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_population</th>\n",
+       "      <th>violent_crime_rate</th>\n",
+       "      <th>property_crime</th>\n",
+       "      <th>immigrants</th>\n",
+       "      <th>property_crime_rate</th>\n",
+       "      <th>violent_crime</th>\n",
+       "      <th>immigrant_share</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>12281000</td>\n",
+       "      <td>325.7</td>\n",
+       "      <td>62973</td>\n",
+       "      <td>508000</td>\n",
+       "      <td>1653.4</td>\n",
+       "      <td>12404</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>12710000</td>\n",
+       "      <td>366.2</td>\n",
+       "      <td>276023</td>\n",
+       "      <td>739000</td>\n",
+       "      <td>2173.0</td>\n",
+       "      <td>46514</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>12784000</td>\n",
+       "      <td>316.4</td>\n",
+       "      <td>222795</td>\n",
+       "      <td>871000</td>\n",
+       "      <td>1742.7</td>\n",
+       "      <td>40447</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      total_population  violent_crime_rate  property_crime  immigrants  \\\n",
+       "2000          12281000               325.7           62973      508000   \n",
+       "2010          12710000               366.2          276023      739000   \n",
+       "2016          12784000               316.4          222795      871000   \n",
+       "\n",
+       "      property_crime_rate  violent_crime  immigrant_share  \n",
+       "2000               1653.4          12404              4.1  \n",
+       "2010               2173.0          46514              5.8  \n",
+       "2016               1742.7          40447              6.8  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pe_df = pd.DataFrame.from_dict(pennsylvania_data, orient='index')\n",
+    "pe_df"
    ]
   },
   {
